@@ -8,7 +8,7 @@
 *********************************************************************/
 
 /*
- * $Id: OpenGL_Utils.c,v 1.103 2008/07/11 19:28:44 crc_canada Exp $
+ * $Id: OpenGL_Utils.c,v 1.104 2008/07/24 15:25:48 crc_canada Exp $
  *
  */
 #include "headers.h"
@@ -537,7 +537,6 @@ void zeroVisibilityFlag(void) {
 
 	/* do we have GL_ARB_occlusion_query, or are we still parsing Textures? */
 	if ((OccFailed) || isTextureParsing()) {
-
 		/* if we have textures still loading, display all the nodes, so that the textures actually
 		   get put into OpenGL-land. If we are not texture parsing... */
 		/* no, we do not have GL_ARB_occlusion_query, just tell every node that it has visible children 
